# Aegis

./: .gitignore  AEGIS_PROJECT_BIBLE.md  Cargo.toml  Contributing.md  DEPENDENCIES.md  MARKETPLACE_APPS.md  README.md  Roadmap.md  SECURITY.md  TEST_SUITE_SUMMARY.md  WORKFLOWS.md  _config.yml  codecov.yml  index.md  renovate.json  sonar-project.properties
.devcontainer/: devcontainer.json  setup.sh
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: ci-enhanced.yml  docs.yml  rate-limit-monitor.yml  release.yml  rust.yml  security.yml
Aegis_Bridge/: Cargo.toml
Aegis_Bridge/Src/: lib.rs
Aegis_Compiler/: Cargo.toml  run_tests.bat  run_tests.sh
Aegis_Compiler/Src/: architect_mod.rs  ast.rs  error.rs  lib.rs  lib_new.rs  mod.rs  test.rs  token.rs
Aegis_Compiler/Src/Architect/: mod.rs
Aegis_Compiler/Src/Architect /: ast.rs  mod.rs
Aegis_Compiler/Src/Engine /: ail.rs  codegen android.rs  lowerer.rs  mod.rs
Aegis_Compiler/Src/Guardian/: mod.rs
Aegis_Compiler/Src/Guardian /: mod.rs  symbol table.rs  types.rs
Aegis_Compiler/tests/: README.md  basic_integration_test.rs  contract_initialization_tests.rs  enum_pattern_tests.rs  error_handling_tests.rs  generic_contract_instantiation_tests.rs  generic_contract_tests.rs  integration_tests.rs  language_feature_tests.rs  lexer_tests.rs  lib.rs  mod.rs  parser_tests.rs  performance_tests.rs  semantic_tests.rs  test_runner.rs  test_utils.rs
Aegis_LSP/: Cargo.toml
Aegis_LSP/Src/: main.rs
Docs/: guide.md
Examples/: async demo.ag  conditions.ag  interrop demo.ag  task manager.ag
scripts/: dev-setup.sh
