# This is the manifest for the entire Aegis workspace.
[workspace]

# It lists all the Rust crates that are part of this project.
members = [
    "Aegis_Compiler",
    "Aegis_LSP", 
    "Aegis_Bridge",
]

# Using "resolver = 2" enables the newer, more efficient
# feature resolver from Cargo.
resolver = "2"

# In a larger project, we could define shared dependencies here
# to ensure all crates use the same version of a library.
# [workspace.dependencies]
# serde = "1.0"

# Optimization settings for release builds
[profile.release]
opt-level = 3
lto = true