[package]
name = "aegis-compiler"
version = "0.1.0"
edition = "2021"
authors = ["The Aegis Project Contributors"]
description = "The Aegis programming language compiler"
license = "MIT"
repository = "https://github.com/Heartless-Veteran/Aegis"

[lib]
name = "aegis_compiler"
path = "Src/lib.rs"

[dependencies]
# Add any dependencies the compiler needs

[dev-dependencies]
# Test dependencies
criterion = "0.5"  # For benchmarking
proptest = "1.0"   # For property-based testing

[features]
default = []
# Feature flags for different compiler components
debug-mode = []
performance-profiling = []