[package]
name = "aegis-lsp"
version = "0.2.0"
edition = "2021"
authors = ["The Aegis Project Contributors"]
description = "Language Server Protocol (LSP) implementation for the Aegis language."

[[bin]]
name = "aegis-lsp"
path = "Src/main.rs"

[dependencies]
# This line links our LSP to our compiler.
aegis-compiler = { path = "../Aegis_Compiler" }

# For the Language Server Protocol framework.
tower-lsp = "0.20"

# The asynchronous runtime required by tower-lsp.
tokio = { version = "1.48.0", features = ["full"] }

# For thread-safe access to our document store.
dashmap = "6.1"

# For logging and diagnostics.
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
